[Catalina GPU] fast/canvas/webgl/lose-context-on-timeout.html is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=229523 <rdar://problem/82360416>

Fix the race conditions in simulating GPUP GraphicsContextGL timeout by
switching from async to sync calls.  This ensures that the processing of
subsequent messages will fail, triggering webglcontextlost event which the test
relies on to complete successfully.

Reviewed by NOBODY (OOPS!).

* Tools/Scripts/generate-gpup-webgl
- Add missing LIBGBM PrepareForDisplay()
- Make SimulateEventForTesting(...) synchronous so subsequent
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::dispatchMessage):
(WebKit::GPUConnectionToWebProcess::dispatchSyncMessage):
GraphicsContextGL messages received out-of-stream are invalid and + should be
treated as a failure.
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
(WebKit::RemoteGraphicsContextGL::workQueueUninitialize):
Don't unconditionally access m_context. In the testing case of
lose-context-on-timeout, m_context is NULL on shutdown.
(WebKit::RemoteGraphicsContextGL::simulateEventForTesting):
Make SimulatedEventForTesting::Timeout case synchronous. Making the IPC message
SimulateEventForTesting synchronous and using callOnMainRunLoopAndWait fixes the
flaky behavior of lose-context-on-timeout.html
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.h:
* Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.messages.in:
Source changes due to generate-gpup-webgl
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
Add generated files for RemoteGraphicsContextGL and RemoteGraphicsContextGLProxy.
* Source/WebKit/WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.cpp:
(WebKit::RemoteGraphicsContextGLProxy::simulateEventForTesting):
* LayoutTests/fast/canvas/webgl/lose-context-on-timeout-expected.txt:
Correct output from test.
* LayoutTests/fast/canvas/webgl/lose-context-on-timeout.html:
Add a second WebGL context to keep the WP-GPUP connection alive. This stops the
WP-GPUP connection from being closed when no more GraphicsContextGL remain,
causing the test to pass.
* LayoutTests/gpu-process/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
GPUP is required for correct execution of lose-context-on-timeout.html.